--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 thiserror = "1"
-tokio = { version = "1", features = ["full"] }
+
