--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.99"
 async-trait = "0.1"
 bitflags = { version = "2.9.3", features = ["serde"]}
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
